<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.example.library.viewmodels.userViewModels.LoginViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.startActivityFragments.LoginFragment"
    android:background="@drawable/gradient_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_textView"
        style="@style/EditTextStyle"
        android:hint="@string/e_mail"
        android:textColor="@color/elemetscolor"
        android:theme="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/login_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_editText"
            style="TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.email}"
            android:textColor="@color/elemetscolor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_textView"
        style="@style/BigText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/library"
        app:layout_constraintBottom_toTopOf="@+id/login_email_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_textView"
        style="@style/EditTextStyle"
        android:theme="@style/EditTextStyle"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="TextInputEditText"
            android:text="@={viewModel.password}"
            android:textColor="@color/elemetscolor"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_login_button"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_textView"
        app:layout_constraintVertical_bias="0.19999999" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_to_register_button"
        style="@style/ButtonStyleEmpty"
        android:layout_width="200dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button"
        app:layout_constraintVertical_bias="0.120000005" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>