<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="user" type="com.example.library.beans.daoModels.DaoUser"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.mainActivityFragments.ProfileFragment"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/profile_login_textView"
        style="@style/TextViewStyle"
        android:layout_marginTop="48dp"
        android:text="@{user.mail}"
        android:visibility="@{user.mail == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/books_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mybooks_profile_button"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:text="@string/my_books"
        android:visibility="@{user.mail == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/books_profile_button"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:text="@string/all_books"
        android:visibility="@{user.mail == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mybooks_profile_button"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/create_book_button"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:text="@string/create_book"
        android:visibility="@{user.mail == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/books_profile_button"
        app:layout_constraintVertical_bias="0.120000005" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:indeterminate="true"
        android:visibility="@{user.mail == null ? View.VISIBLE : View.GONE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_profile_textview"
        style="@style/BigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/my_profile"
        app:layout_constraintBottom_toTopOf="@+id/profile_login_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>