...


    <TextView
        android:id="@+id/createBook_textView"
        style="@style/BigText"
        android:text="@string/create_book"
        app:layout_constraintBottom_toTopOf="@+id/createBook_createBookView_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
...
        app:layout_constraintBottom_toTopOf="@+id/createBook_createBookView_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBook_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_name_editText"
            android:layout_width="match_parent"
            android:text="@={viewModel.bookName}"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


...
