...
    <TextView
        android:id="@+id/bookName_addedBook_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{book.name}"
        android:visibility="@{book == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/reserveBook_Button_addedBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_addedBook_textView"
...
        android:indeterminate="true"
        android:visibility="@{book.name == null ? View.VISIBLE : View.GONE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/return_addedBook"
        style="@style/ButtonStyle"
        android:text="@string/returnBook"
        android:visibility="@{book.name == null ? View.GONE : View.VISIBLE}"
        android:layout_width="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
