...
    <TextView
        android:id="@+id/bookName_showBook_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{book.name}"
        android:visibility="@{book == null ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toTopOf="@+id/reserveBook_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_showBook_textView"
...
